--- a/static/site/material_list.html
+++ b/static/site/material_list.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script src="js/material.js" type="text/javascript"></script>
+<script src="js/material-array.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
