--- a/static/site/material_list.html
+++ b/static/site/material_list.html
@@ -7,6 +7,24 @@
 <body>
 <script src="js/material.js" type="text/javascript"></script>
 <script src="js/material-array.js" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
+ <script src="js/script.js" type="text/javascript"></script>
+
+
+<style>
+
+    .material-cell {
+        float:left;
+    }
+
+    .material {
+        border:1px solid #aaaaaa;
+        border-radius:7px;
+        padding: 10px;
+        margin: 3px;
+    }
+
+
+</style>
+<div id="container"></div>
 </body>
 </html>
